<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InZone</string>
    <string name="action_settings">Settings</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="calculate">Calculate</string>
    <string name="titleServiceStart">Start Service</string>
    <string name="titleServiceStop">Stop Service</string>
    <string name="titleServiceLog">Service Log</string>
    <string name="study_activity_window">Zones</string>
	<string name="study_detail_activity_window">Zone Detail</string>
    <string name="edit_security_list">Edit Portfolio</string>
    <string name="security_edit_symbol">Security Symbol</string>
    <string name="security_edit_confirm">Confirm</string>
    <string name="security_detail_window">Security</string>
    <string name="security_list_window">Portfolio</string>
    <string name="settings_window">Settings</string>
    <string name= "no_securities">No Securities</string>
    <string name="security_list_insert">Insert</string>
    <string name="deleteButtonDescription">Delete Security from list</string>
    <string name="portfolio">Portfolio</string>
    <string name="studyHeaderSymbol">Sym</string>
    <string name="studyHeaderLast">Last</string>
    <string name="studyHeaderNet">Net</string>
    <string name="studyHeaderMa">EMA</string>
    <string name="studyHeaderSma">SMA</string>
    <string name="studyHeaderBuyZone">Buy</string>
    <string name="studyHeaderSellZone">Sell</string>
    <string name="studyHeaderMonthlyTrend">M</string>
    <string name="studyHeader_WeeklyTrend">W</string>
    <string name="content_desc_monthly_trend">Monthly Trend</string>
    <string name="content_desc_weekly_trend">Weekly Trend</string>
    <string name="notice_possible_weekly_downtrend_termination">Possible Weekly Downtrend Termination</string>
    <string name="notice_possible_weekly_uptrend_termination">Possible Weekly Uptrend Termination</string>
    <string name="notice_in_sell_zone">In Sell Zone</string>
    <string name="notice_in_buy_zone">In Buy Zone</string>
    <string name="notice_has_traded_below_ma">Trading below moving average</string>
    <string name="notice_possible_weekly_downtrend_termination_text">%1$s is trading above moving average.</string>
    <string name="notice_possible_weekly_uptrend_termination_text">%1$s is trading below moving average</string>
    <string name="notice_in_sell_zone_text">%1$s is in the Sell Zone</string>
    <string name="notice_in_buy_zone_text">%1$s is in the Buy Zone</string>
    <string name="notice_has_traded_below_ma_text">%1$s has traded below moving average</string>
    <string name="notice_no_price">No Price</string>
    <string name="notice_no_price_text">No Price for %1$s</string>
    <string name="notice_insufficent_history">Insufficient History</string>
    <string name="notice_insufficent_history_text">Insufficient History for %1$s"</string>
    <string name="notice_delayed_price">Delayed Price</string>
    <string name="notice_delayed_price_text">Using Delayed Price for %1$s"</string>
    <string name="alert_possible_weekly_downtrend_termination">Price is above moving average.</string>
    <string name="alert_possible_weekly_uptrend_termination">Price is below moving average</string>
    <string name="alert_in_sell_zone">Price is in the Sell Zone</string>
    <string name="alert_in_buy_zone">Price is in the Buy Zone</string>
    <string name="alert_has_traded_below_ma">has recently traded below moving average check stop loss selling</string>
    <string name="alert_sell_zone_expanded_by_monthly">Sell Zone is expanded by lower Monthly Range</string>
    <string name="alert_no_price">No Price</string>
    <string name="alert_insufficent_history">Insufficient History</string>
    <string name="alert_delayed_price">Delayed Price</string>
    <string name="status_trend">Trend</string>
    <string name="status_weekly_uptrend">Weekly=Uptrend</string>
    <string name="status_weekly_downtrend">Weekly=Downtrend</string>
    <string name="status_monthly_uptrend">Monthly=Uptrend</string>
    <string name="status_monthly_downtrend">Monthly=Downtrend</string>
    <string name="menu_item_done">Done</string>
    <string name="pref_autoRestart">Auto Restart Price Service</string>
    <string name="pref_autoRestartSumm">Keep Price Update and Notification Service running without need for user to start program</string>
    <string name="pref_updateFrequency">Price Update Frequency</string>
    <string name="pref_updateFrequencyTypeOne">One Minute</string>
    <string name="pref_updateFrequencyTypes_default">3</string>
    <string name="scheduledStartSubject">Started by Schedule</string>
    <string name="startTypeSchedule">Scheduled</string>
    <string name="startTypeRepeating">Repeating</string>
    <string name="startTypeManual">App</string>
    <string name="startTypeManualMenu">Menu</string>
    <string name="scheduledStartMessage">Started by %1$s</string>
    <string name="scheduleSetupSubject">Schedule Setup</string>
    <string name="scheduleStartMessage">Start at %1$s</string>
    <string name="scheduleRepeatingMessage">Start at %1$s repeating every %1$s</string>
    <string name="scheduleRepeatingAlreadySetup">Repeating already setup</string>
    <string name="scheduleSetupBusy">Schedule Setup Busy</string>
    <string name="scheduleStateBusy">Schedule State Busy</string>
    <string name="updateServiceSubject">Update Service</string>
    <string name="sdfColumnHeader4">Monthly</string>
    <string name="sdfColumnHeader3">Weekly</string>
    <string name="sdfEColumnHeader4">Monthly</string>
    <string name="sdfEColumnHeader3">Weekly\nSMA</string>
    <string name="sdfPriceLabel">Price</string>
    <string name="sdfAtr24Label">ATR/4</string>
    <string name="sdfLowLabel">Low</string>
    <string name="sdfHighLabel">High</string>
    <string name="sdfAlertNameLabel">Status\nAlert</string>
    <string name="sdfStatusNameLabel">Status</string>
    <string name="sdfPricePlusAtr25Label">Stop</string>
   	<string name="tab_protfolio_1">Weekly</string> 
   	<string name="tab_protfolio_2">Monthly</string> 
   	<string name="tab_protfolio_3">Other</string> 
   	<string name="sla_moving_average_type">Strategy</string> 
   	<string name="sla_portfolio_name">Name</string> 
   	<string name="sla_maTypeEma">EMA</string> 
   	<string name="sla_maTypeSma">SMA</string> 
   	<string name="pref_portfolio_type1">Portfolio #1 Strategy</string>
   	<string name="pref_portfolio_name1">Portfolio #1 Name</string>
   	<string name="pref_portfolio_name1_defaultValue">Weekly</string>
   	<string name="pref_portfolio_type2">Portfolio #2 Strategy</string>
   	<string name="pref_portfolio_name2">Portfolio #2 Name</string>
   	<string name="pref_portfolio_name2_defaultValue">Simple</string>
   	<string name="pref_portfolio_type3">Portfolio #3 Strategy</string>
   	<string name="pref_portfolio_name3">Portfolio #3 Name</string>
   	<string name="pref_portfolio_name3_defaultValue">Other</string>
   	<string name="pref_ringtone">Alert Notification Ring Tone</string>
   	<string name="pref_ringtone_silent">Silent</string>
   	<string name="pref_vibrate">Alert Vibrate</string>
   	<string name="pref_vibrate_summary">Off</string>
   	<string name="pref_vibrate_on">On</string>
   	<string name="pref_vibrate_off">Off</string>
   	<string name="sdfInCashLabel">In Cash</string>
   	<string name="sdfInCashAndPutLabel">In Cash and Short Puts</string>
   	<string name="sdfInStockLabel">In Stock</string>
   	<string name="sdfInStockAndCallLabel">In Stock and Short Call</string>
   	<string name="sdfCurrentPositionLabel">Currently</string>
   	<string name="sdfRuleTextLabel">Rule</string>
   	<string name="sdfLabelSymbol">SYM</string>
   	<string name="sdfLabelHeadingZone">Zone</string>
   	<string name="sdfLabelZoneWS">WS</string>
   	<string name="sdfLabelZoneWBWeekly">WB SMA Weekly</string>
   	<string name="sdfLabelZoneWBMonthy">SMA Monthly</string>
   	<string name="sdfLabelZonePDL1">PDL1</string>
   	<string name="sdfLabelZonePDL2">PDL2</string>
	<string name="servicelog_window">Service Log</string>
	<string name="no_servicelog">Empty</string>
   	<string name="servicelog_list_datetime">Time</string>
   	<string name="servicelog_list_type">Type</string>
   	<string name="servicelog_list_message">Message</string>
   	<string name="servicelog_list_interation">Cnt</string>
   	<string name="servicelog_list_runtime">Seconds</string>
    <string name="serviceStoppedMessage">Stopped</string>
    <string name="serviceStoppedHistory">Stopped His-Reload</string>
    <string name="serviceRunningMessage">Running</string>
    <string name="servicePausedMessage">Paused</string>
    <string name="servicePausedHistory">Paused His-Reload</string>
    <string name="serviceShutdownMessage">Shutdown</string>
    	
</resources>