<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="pref_autoRestart"
        android:title="@string/pref_autoRestart"
        android:summary="@string/pref_autoRestartSumm"
        android:defaultValue="true" />

    <EditTextPreference
        android:key="pref_portfolio_name1"
        android:title="@string/pref_portfolio_name1"
        android:dialogTitle="@string/pref_portfolio_name1"
        android:defaultValue="@string/pref_portfolio_name1_defaultValue"
        />
    
    <ListPreference
        android:key="pref_portfolio_type1"
        android:title="@string/pref_portfolio_type1"
        android:dialogTitle="@string/pref_portfolio_type1"
        android:entries="@array/pref_portfolio_type_entries"
        android:entryValues="@array/pref_portfolio_type_values"
        android:defaultValue="E" />
    
    <EditTextPreference
        android:key="pref_portfolio_name2"
        android:title="@string/pref_portfolio_name2"
        android:dialogTitle="@string/pref_portfolio_name2"
        android:defaultValue="@string/pref_portfolio_name2_defaultValue"
        />
    
    <ListPreference
        android:key="pref_portfolio_type2"
        android:title="@string/pref_portfolio_type2"
        android:dialogTitle="@string/pref_portfolio_type2"
        android:entries="@array/pref_portfolio_type_entries"
        android:entryValues="@array/pref_portfolio_type_values"
        android:defaultValue="E" />
    
    <EditTextPreference
        android:key="pref_portfolio_name3"
        android:title="@string/pref_portfolio_name3"
        android:dialogTitle="@string/pref_portfolio_name3"
        android:defaultValue="@string/pref_portfolio_name3_defaultValue"
        />
    
    <ListPreference
        android:key="pref_portfolio_type3"
        android:title="@string/pref_portfolio_type3"
        android:dialogTitle="@string/pref_portfolio_type3"
        android:entries="@array/pref_portfolio_type_entries"
        android:entryValues="@array/pref_portfolio_type_values"
        android:defaultValue="E" />
    
    </PreferenceScreen>