<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/itemStartSerivce"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/titleServiceStart">
    </item>
  
    <item
        android:id="@+id/itemStopService"
        android:icon="@android:drawable/ic_media_pause"
        android:title="@string/titleServiceStop">
    </item>
    
    <item
        android:id="@+id/itemServiceLog"
        android:title="@string/titleServiceLog">
    </item>
    
    <item android:id="@+id/portfolio" android:title="@string/portfolio" android:showAsAction="always"></item>

</menu>