<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/studyListHeader_symbol"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:text="@string/studyHeaderSymbol"
        android:textIsSelectable="true"
		android:focusableInTouchMode="false"
		android:clickable="false"
		android:focusable="false"         
        android:textStyle="bold" />

    <TextView
        android:id="@+id/studyListHeader_MonthyTrend"
        android:layout_width="12dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/studyHeaderMonthlyTrend"
        android:textAlignment="center"
        android:textIsSelectable="true"
		android:focusableInTouchMode="false"
		android:clickable="false"
		android:focusable="false"         
        android:textStyle="bold"  />

    <TextView
        android:id="@+id/studyListHeader_WeeklyTrend"
        android:layout_width="12dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/studyHeader_WeeklyTrend"
        android:textAlignment="center"
        android:textIsSelectable="true"
		android:focusableInTouchMode="false"
		android:clickable="false"
		android:focusable="false"         
        android:textStyle="bold"  />

    <TextView
        android:id="@+id/studyListHeader_Price"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/studyHeaderLast"
        android:textIsSelectable="true"
		android:focusableInTouchMode="false"
		android:clickable="false"
		android:focusable="false"         
        android:textStyle="bold"  />

    <TextView
        android:id="@+id/studyListHeader_ema"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/studyHeaderSma"
        android:textIsSelectable="true"
		android:focusableInTouchMode="false"
		android:clickable="false"
		android:focusable="false"         
        android:textStyle="bold"  />

    <TextView
        android:id="@+id/studyListHeader_BuyZone"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/studyHeaderBuyZone"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textIsSelectable="true"
		android:focusableInTouchMode="false"
		android:clickable="false"
		android:focusable="false" 
		android:textStyle="bold"  />

    <TextView
        android:id="@+id/studyListHeader_SellZone"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/studyHeaderSellZone"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textIsSelectable="true" 
		android:focusableInTouchMode="false"
		android:clickable="false"
		android:focusable="false" 
        android:textStyle="bold" />
        
    
</LinearLayout>