<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2011 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    android:orientation="vertical" >

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    <TextView
        android:id="@+id/studyListHeader_symbol"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:text="@string/studyHeaderSymbol"
        android:textIsSelectable="true"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/studyListHeader_MonthyTrend"
        android:layout_width="12dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/studyHeaderMonthlyTrend"
        android:textAlignment="center"
        android:textIsSelectable="true"
        android:textStyle="bold"  />

    <TextView
        android:id="@+id/studyListHeader_WeeklyTrend"
        android:layout_width="12dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/studyHeader_WeeklyTrend"
        android:textAlignment="center"
        android:textIsSelectable="true"
        android:textStyle="bold"  />

    <TextView
        android:id="@+id/studyListHeader_Price"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/studyHeaderLast"
        android:textIsSelectable="true"
        android:textStyle="bold"  />

    <TextView
        android:id="@+id/studyListHeader_ema"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/studyHeaderMa"
        android:textIsSelectable="true"
        android:textStyle="bold"  />

    <TextView
        android:id="@+id/studyListHeader_BuyZone"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/studyHeaderBuyZone"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textIsSelectable="true"
		android:textStyle="bold"  />

    <TextView
        android:id="@+id/studyListHeader_SellZone"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/studyHeaderSellZone"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textIsSelectable="true" 
        android:textStyle="bold" />
        
    </LinearLayout>
    <!--z 
    <com.codeworks.pai.PaiStudyListViewNotUsed
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:layout_weight="1"
        android:drawSelectorOnTop="false" />
    -->

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical" >
        
    <TextView
        android:id="@+id/studyList_lastUpdated"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:gravity="center"
        android:textSize="12sp"        
        android:textAlignment="center"
        android:textIsSelectable="true"/>
        
    </LinearLayout>
    
</LinearLayout>